fix(QInfiniteScroll): hide transitions and animations for invisible items #15094

--- a/ui/src/css/core/visibility.styl
+++ b/ui/src/css/core/visibility.styl
@@ -36,8 +36,10 @@
 
 .hidden
   display: none !important
-.invisible
+.invisible, .invisible *
   visibility: hidden !important
+  transition: none !important
+  animation: none !important
 .transparent
   background: transparent !important
 
